# flask-api

./: README.md
backend/: .env  pyproject.toml  settings.toml
backend/backend/: app.py  development.db  models.py
backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/backend/blueprints/restapi/: resources.py
backend/backend/blueprints/webui/: views.py
backend/backend/blueprints/webui/templates/: index.html
backend/backend/ext/: admin.py  auth.py  commands.py
backend/tests/: conftest.py
