[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Ricardo Kowalski <ricardo.alves@aluno.ifsp.edu.br>"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
