[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Ricardo Kowalski <ricardo.alves@aluno.ifsp.edu.br>"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1.2"
flask-restful = "^0.3.8"
flask-sqlalchemy = "^2.4.2"
flask-simplelogin = "^0.0.7"
sqlalchemy-serializer = "^1.3.4"
flask-admin = "^1.5.6"
dynaconf = "^2.2.3"
flask_debugtoolbar = "^0.11.0"
bootstrap-flask = "^1.3.1"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
